--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,6 +1,8 @@
 <!-- Navbar vizibil doar dacă showNavbar e true -->
 <nav class="navbar" *ngIf="showNavbar">
+  <a routerLink="/home">
   <img src="assets/Endava_Logo.svg" alt="Logo" class="nav-logo" />
+</a>
   <button class="nav-btn" routerLink="/register">Register User</button>
 </nav>
 
