--- a/angular/src/app/login/login.component.html
+++ b/angular/src/app/login/login.component.html
@@ -1,21 +1,18 @@
-
 <div class="login-container">
   <div class="login-card">
-     <img src="assets/Endava_Symbol.svg" alt="Endava Logo" style="width: 50px; height: 50px" />
+    <img src="assets/Endava_Symbol.svg" alt="Endava Logo" style="width: 50px; height: 50px" />
 
     <h2 class="login-title">Login</h2>
-    <form>
+    <form (ngSubmit)="onLogin()">
       <div class="form-group">
         <label for="email">Email</label>
-        <input id="email" type="email" required />
+        <input id="email" type="email" [(ngModel)]="email" name="email" required />
+      </div>
+      <div *ngIf="errorMessage" class="error-alert">{{ errorMessage }}
       </div>
 
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input id="password" type="password" required />
-      </div>
 
-      <button type="button" class="login-btn" (click)="onLogin()">Sign In</button>
+      <button type="submit" class="login-btn">Sign In</button>
     </form>
   </div>
 </div>
