Integrated backend for pingpong

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -3,7 +3,8 @@
   <a routerLink="/home">
   <img src="assets/Endava_Logo.svg" alt="Logo" class="nav-logo" />
 </a>
-  <button class="nav-btn" routerLink="/register">Register User</button>
+  <button class="logout-btn" (click)="logout()">Logout</button>
+
 </nav>
 
 <!-- Pagini -->
