--- a/angular/src/app/home/home.component.html
+++ b/angular/src/app/home/home.component.html
@@ -15,7 +15,7 @@
       <img src="assets/fussball.jpg" alt="Fussball" />
       <div class="activity-title">Fussball</div>
     </a>
-    <a class="activity-card" routerLink="/masaj">
+    <a class="activity-card" routerLink="/massage">
       <img src="assets/masaj.jpg" alt="Masaj" />
       <div class="activity-title">Massage</div>
     </a>
